--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ doc/api/
 *.js_
 *.js.deps
 *.js.map
+.DS_Store
+first_app/.DS_Store
+first_app/macos/
+lab3/macos
+lab3/windows
+lab3/web
+lab3/test
